# veides-agent-sdk-c

./: .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md
docker/: Dockerfile.template
samples/: CMakeLists.txt  CMakeLists.txt.dist  README.md  agentBasic.c
tests/: veides_agent_client.cpp  veides_agent_client_properties.cpp  veides_utils.cpp
veides_agent_client/include/: veides_agent_client.h  veides_base_client.h  veides_internal.h  veides_logger.h  veides_properties.h  veides_rc.h  veides_utils.h  veides_version.h.in
veides_agent_client/src/: veides_agent_client.c  veides_base_client.c  veides_logger.c  veides_properties.c  veides_utils.c
